fix: z-index for area

--- a/apps/webextension/src/interface/components/AreasRenderer.module.scss
+++ b/apps/webextension/src/interface/components/AreasRenderer.module.scss
@@ -13,6 +13,7 @@
 	font-family: sans-serif;
 	user-select: none;
 	overflow: hidden;
+	z-index: 2147483647 - 3;
 
 	&.selected {
 		border-color: lime;
